@@ -2,26 +2,29 @@
 
 libraries.settings:
   type: config_object
-  title: 'Libraries API settings'
+  label: 'Libraries API settings'
   mapping:
     definition:
       type: mapping
-      title: 'Library definition settings'
+      label: 'Library definition settings'
       mapping:
         local:
           type: mapping
-          title: 'Local'
+          label: 'Local'
           mapping:
             path:
               type: path
-              title: 'Local path'
+              label: 'Local path'
         remote:
           type: mapping
           title: 'Remote'
           mapping:
             enable:
               type: boolean
-              title: 'Enable remote fetching of library definitions'
-            url:
-              type: uri
-              title: 'The URL of the canonical library registry.'
+              label: 'Enable remote fetching of library definitions'
+            urls:
+              type: sequence
+              label: 'A list of remote library registry URLs'
+              sequence:
+                type: uri
+                label: 'The URL of a remote library registry'
