@@ -5,22 +5,31 @@ services:
       - '@libraries.definition.discovery'
       - '@plugin.manager.libraries.library_type'
 
-  # These services are modified depending on the values of the
-  # 'libraries.settings' configuration object. See LibrariesServiceProvider.
+  # By default Libraries API downloads library definitions from a number of
+  # remote library registries, the canonical one being
+  # https://www.drupal.org/project/libraries_registry, and stores them locally
+  # in the public://library-definitions directory. The URLs of the remote
+  # library registries and the local base path can be configured. The remote
+  # fetching can also be disabled altogether.
   libraries.definition.discovery:
-    class: Drupal\libraries\ExternalLibrary\Definition\ChainDefinitionDiscovery
-    arguments: ['@serialization.yaml']
-    calls:
-      - [addDiscovery, ['@libraries.definition.discovery.local']]
-  libraries.definition.discovery.local:
-    class: Drupal\libraries\ExternalLibrary\Definition\WritableFileDefinitionDiscovery
-    arguments: ['@serialization.yaml', 'public://library-definitions']
-  libraries.definition.discovery.remote:
-    class: Drupal\libraries\ExternalLibrary\Definition\GuzzleDefinitionDiscovery
+    class: Drupal\libraries\ExternalLibrary\Definition\DefinitionDiscoveryInterface
+    factory: 'libraries.definition.discovery.factory:get'
+  libraries.definition.discovery.factory:
+    class: Drupal\libraries\ExternalLibrary\Definition\DefinitionDiscoveryFactory
     arguments:
+      - '@config.factory'
+      - '@serialization.json'
       - '@http_client'
       - '@serialization.json'
-      - 'http://cgit.drupalcode.org/libraries_registry/plain/registry/8'
+  # If you instead want to check your library definitions into version control
+  # and use YAML for them instead of JSON, you can place the following service
+  # definition in your site's services.yml file:
+  # libraries.definition.discovery:
+  #   class: Drupal\libraries\ExternalLibrary\Definition\FileDefinitionDiscovery
+  #   arguments:
+  #     - '@serialization.yaml'
+  #     # Replace this with the location of the library definitions in your setup.
+  #     - '../library-definitions'
 
   plugin.manager.libraries.library_type:
     class: Drupal\libraries\ExternalLibrary\Type\LibraryTypeFactory
@@ -34,7 +43,7 @@ services:
 
   libraries.config_subscriber:
     class: Drupal\libraries\Config\LibrariesConfigSubscriber
-    arguments: ['@kernel']
+    arguments: ['@service_container']
     tags:
       - { name: event_subscriber }
 
