@@ -4,7 +4,7 @@ namespace Drupal\libraries\Config;
 
 use Drupal\Core\Config\ConfigCrudEvent;
 use Drupal\Core\Config\ConfigEvents;
-use Drupal\Core\DrupalKernelInterface;
+use Symfony\Component\DependencyInjection\ContainerInterface;
 use Symfony\Component\EventDispatcher\EventSubscriberInterface;
 
 /**
@@ -13,31 +13,31 @@ use Symfony\Component\EventDispatcher\EventSubscriberInterface;
 class LibrariesConfigSubscriber implements EventSubscriberInterface {
 
   /**
-   * The Drupal kernel.
+   * The service container.
    *
-   * @var \Drupal\Core\DrupalKernelInterface
+   * @var \Symfony\Component\DependencyInjection\ContainerInterface
    */
-  protected $kernel;
+  protected $container;
 
   /**
    * Constructs a Libraries API configuration subscriber.
    *
-   * @param \Drupal\Core\DrupalKernelInterface $kernel
-   *   The Drupal kernel.
+   * @param \Symfony\Component\DependencyInjection\ContainerInterface $container
+   *   The service container.
    */
-  public function __construct(DrupalKernelInterface $kernel) {
-    $this->kernel = $kernel;
+  public function __construct(ContainerInterface $container) {
+    $this->container = $container;
   }
 
   /**
-   * Invalidates the container when the definition settings are updated.
+   * Unsets the definition discovery service when its configuration changes.
    *
    * @param \Drupal\Core\Config\ConfigCrudEvent $event
    *   The configuration event.
    */
   public function onConfigSave(ConfigCrudEvent $event) {
     if (($event->getConfig()->getName() === 'libraries.settings') && $event->isChanged('definition')) {
-      $this->kernel->invalidateContainer();
+      $this->container->set('libraries.definition.discovery', NULL);
     }
   }
 
