@@ -1,2 +1,0 @@
-type: php_file
-files: [test_php_file_library.php]
