@@ -1,6 +1,11 @@
 
 Libraries 8.x-3.x, xxxx-xx-xx
 -----------------------------
+#2825940 by tstoeckler, rjacobs: Remove LibrariesServiceProvider
+#2816115 by rjacobs: Remove ExtensionHandler service
+#2770983 by rjacobs: Update services.yml to reference new registry URL of http://cgit.drupalcode.org/libraries_registry/plain/registry/8
+#2770983 by rjacobs: Update shipped config to reference new registry URL of http://cgit.drupalcode.org/libraries_registry/plain/registry/8
+#2815189 by rjacobs, tstoeckler: Library dependency checking can fail for install profile
 #2770983 by tstoeckler, rjacobs: Fetch definitions remotely and store them locally.
 #2770983 by tstoeckler: Make Libraries API work on Windows.
 #2770983 by tstoeckler: Allow libraries to be symlinked to their right place.
